kubectl/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-deployment

spec:
  replicas: 1

  selector: 
    matchLabels:
      components: frontend

  template: # перенесли часть из пода
    metadata: 
      labels:
        components: frontend
    spec: 
      containers:
        - name: short-app
          image: antonlarichev/short-app:v1.4
          ports: 
            - containerPort: 80
          resources: 
            limits: 
              memory: "128Mi" 
              cpu: "100m"
