kubectl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations: # доп конфигурации 
    nginx.ingress.kubernetes.io/add-base-url: "true"

spec:
  ingressClassName: nginx # какой ingress хотим использовать
  rules:
  - host: demo.test # домен
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip # перенаправление при попадание на /
            port: 
              number: 80
              
      - pathType: Prefix
        path: "/api"
        backend:
          service: 
            name: api-clusterip
            port: 
              number: 3000
